Update FlightPath.java